# LevelManager

./: .gitignore  CMakeLists.txt  LICENSE  LevelManager.pro  README.md  main.cpp
assets/: resources.qrc
assets/lang/: LevelManager_ar.ts  LevelManager_es.ts  LevelManager_fr_FR.ts
assets/txt/: ecriture.txt
include/: BoxContainer.h  ConfigurePlayer.h  DialogAdmin.h  LMConfigProfile.h  LMGlobal.h  LMMainUi.h  LMProfile.h  LMWizard.h  LMWizzard.h  UserInterface.h
include/ui_/: BoxContainer.ui  ConfigurePlayer.ui  DialogAdmin.ui  LMConfigProfile.ui  LMMainUi.ui  LMProfile.ui  LMWizard.ui  LMWizzard.ui  UserInterface.ui
src/: BoxContainer.cpp  ConfigurePlayer.cpp  DialogAdmin.cpp  LMConfigProfile.cpp  LMGlobal.cpp  LMMainUi.cpp  LMProfile.cpp  LMWizard.cpp  LMWizzard.cpp  UserInterface.cpp
